--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <body>
     <div class="container">
         <h1>Start CountDown</h1>
-        <div class="countdown">
+        <div class="countdown" id="countdown">
             <div class="countdown-box">
-                <div class="countdown-item">00</div>
+                <div class="countdown-item"><span id="days">00</span></div>
                 <span class="label">Days</span>
             </div>
             <div class="countdown-box">
-                <div class="countdown-item">00</div>
+                <div class="countdown-item"><span id="hours">00</span></div>
                 <span class="label">Hours</span>
             </div>
             <div class="countdown-box">
-                <div class="countdown-item">00</div>
+                <div class="countdown-item"><span id="minutes">00</span></div>
                 <span class="label">Minutes</span>
             </div>
             <div class="countdown-box">
-                <div class="countdown-item">00</div>
+                <div class="countdown-item"><span id="seconds">00</span></div>
                 <span class="label">Seconds</span>
             </div>
-            <div class="countdown-box">
+            <!-- <div class="countdown-box">
                 <div class="countdown-item">
                     <button>
                         <img src="play-xxl.png" alt="Play Button">
                     </button>
                 </div>
                 <span class="label">Start</span>
-            </div>
+            </div> -->
         </div>
         
         <h2>Progress Bar</h2>
-        <div class="progress-bar">
+        <div class="progress-container">
             <div  id="progress-bar">
 
             </div>
